started adding Js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>Weather Dashboard</nav>
     <aside class="search-sec" >
         <h1>Search for a City:</h1> 
-        <input class="searchBar" type="text" placeholder="Search for City">
+        <input class="searchBar" type="text" id="citySearch" placeholder="Search for City">
         <button class="searchBtn" type="button">Search</button>
         <ul class="histList"></ul>
     </aside>
