--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/style.css">
     <title>Weather Project</title>
 </head>
 <body>
-    <nav>Weather Dashboard</nav>
+    <nav>
+        <h1>Weather Dashboard</h1>
+    </nav>
     <aside class="search-sec" >
         <h1>Search for a City:</h1> 
         <input class="searchBar" type="text" id="citySearch" placeholder="Search for City">
-        <button class="searchBtn" type="button">Search</button>
+        <button id="searchBtn" type="button">Search</button>
         <ul class="histList"></ul>
     </aside>
     <div class="container">
         <div class="today" id="mt-3"></div>
-        <div class="forecast" id="card-deck mt-3"></div>
+        <div id="forecast" class="card-deck mt-3"></div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="assets/script.js"></script>
 </body>
 
