added storage to save recent searched locations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Search for a City:</h1> 
         <input class="searchBar" type="text" id="citySearch" placeholder="Search for City">
         <button id="searchBtn" type="button">Search</button>
-        <ul class="histList"></ul>
+        <ul class="list-group history"></ul>
     </aside>
     <div class="container">
         <div class="today" id="mt-3"></div>
